  handler. (RFB)
- desk/deskwin.c desk/deskwin.h: Add space before & after pathname in
  desktop window title. (RFB)
- desk/deskwin.h: Reduce desktop RAM usage slightly. (RFB)
- bios/floppy.c: Reduce floppy timeout if spinup is not required. (RFB)

2014-12-19
- bios/floppy.c: Issue Force Interrupt if floppy command times out. (RFB)

2014-12-20
- aes/gemgsxif.c: Tweak menu buffer size to fix menu droppings from QED
  in medium res. (RFB)
- aes/optimize.c: Code cleanup: use strlcpy() for greater clarity, reduced
  code size. (RFB)
- aes/gemfslib.c: Code cleanup: use strlcpy() instead of strcpy(). (RFB)
- bdos/fsdir.c desk/deskdir.c util/string.c: Code cleanup: eliminate tabs
  from source code. (RFB)
- aes/gemfmalt.c aes/gemgsxif.c aes/gemlib.h bdos/bdosmain.c
  bios/dmasound.c bios/floppy.c include/config.h: Code cleanup: remove
  trailing spaces from source code. (RFB)

2014-12-22
- aes/gemgsxif.c: Remove residual (PC-GEM?) code for add-on graphics-only
  memory. (RFB)

2015-01-02
- po/POTFILES.in: Added desksupp.c to translated sources. (VRI)
- po/fr.po: Updated. (VRI)

2015-01-02
- desk/desktop.def desk/desktop.rsc: Small corrections to some alert
  texts. (RFB)
- aes/gem.rsc: Update file selector to allow room for translated text. (RFB)
- desk/desktop.def desk/desktop.rsc desk/desksupp.c: Moved localised text
  strings to resource for consistency. (RFB)
- desk/desktop.def desk/desktop.rsc desk/deskfun.c: Switch Cancel|Retry
  buttons in alert for consistency with AES alerts. (RFB)

2015-01-07
- po/fr.po: Updated. (VRI)
- po/POTFILES.in: Removed desksupp.c from translated sources. (VRI)

2015-01-08
- po/de.po: Updated german translations. (THH)

2015-01-09
- po/de.po: Fixed inverted buttons in "cannot create folder" dialog. (VRI)

2015-01-10
- po/ru.po: Updated. Contributed by Dima Sobolev. (VRI)
- po/fr.po: Improved a few strings. (VRI)
- desk/desktop.def desk/desktop.rsc: Fix width of File Information dialog
  for correct low-res display. (RFB)